services/potatoes-prediction-api-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: potatoes-prediction-api-nodeport
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: potatoes-prediction-api
